--- a/ex2-2.html
+++ b/ex2-2.html
@@ -8,7 +8,9 @@
 <body>
   <h2>대문자인가 소문자인가</h2>
   <script>
-    var str = prompt("문자를 입력하세요");
+   /*
+   앞글자 하나가지고 전체를 판단하면 안된다는 생각을 못함. 
+   var str = prompt("문자를 입력하세요");
     
     if(str >= 'A' && str <= 'Z'){
         console.log("대문자 문장입니다.");
@@ -17,6 +19,24 @@
     }else{
         console.log("보통 문장입니다.");
     }
+   */
+
+   
+        var str = prompt("영어 문장 입력해 주세요.");
+        var ustr = str.toUpperCase();
+        var lstr = str.toLowerCase();
+
+        if (str === ustr) {
+            console.log("대문자 문장입니다.");
+        } else if (str === lstr) {
+            console.log("소문자 문장입니다.");
+        } else {
+            console.log("일반 문장입니다.");
+        }
+    </script>
+</body>
+</html>
+  
   </script> 
 </body>
 </html>
