--- a/ex4_1.html
+++ b/ex4_1.html
@@ -14,7 +14,7 @@
         var sum = 0; 
         for(var num; num !=0; n++){
 
-            num = Number(prompt("수를 입력하세요"));
+            num = Number(prompt("수를 입력하세요(입력한 숫자가 0 이면 종료)"));
             sum += num;
             console.log("사용자가 입력한 수의 갯수"+ n +"/"+ "그 수들의 합은 "+ sum+"입니다.");
         } 
