--- a/gugudan7.html
+++ b/gugudan7.html
@@ -10,8 +10,15 @@
     <script>
         var number = Number(prompt("숫자를 입력하세요"));
         
-        if( number < 2){
-            number
+
+        if( number < 2 || number >9 ){
+            alert("2이상 9이하의 값만 입력할수 있습니다.");
+        }else{
+            console.log(number + "단");
+            for(var i = 1; i < 10; i++){
+                console.log(number + " * " + i + " = " + ( number * i ));
+            
+            }
         }
     </script>
 </body>
