--- a/ex6_explain.html
+++ b/ex6_explain.html
@@ -51,3 +51,6 @@
         numbers.calcPrimes();
         document.getElementById('result').innerHTML = numbers.getAllPrimeNumbers();
         
+    </script>
+</body>
+</html>
